@@ -1,6 +1,7 @@
 <?php
 
 $lang = [
+    'classcfg_success_uglify' => "Run '[sudo] php bin/uglify.php to make the changes effective",
     'classcfg_error' => 'Error',
     'classcfg_denied' => 'Access Denied!',
     'classcfg_error1' => 'A ruffian that will swear, drink, dance, revel the night, rob, murder and commit the oldest of ins the newest kind of ways.',
