@@ -1,18 +1,19 @@
 <?php
 
 $lang = [
+    'classcfg_success_uglify' => "Run '[sudo] php bin/uglify.php to make the changes effective",
     'classcfg_error' => 'Error',
     'classcfg_denied' => 'Access Denied!',
     'classcfg_error1' => 'A ruffian that will swear, drink, dance, revel the night, rob, murder and commit the oldest of ins the newest kind of ways.',
     'classcfg_file_created' => "?php\n\n/**\nThis file was created on ",
     'classcfg_user_cfg' => ".\nUser Class Config.\n**/\n\n",
     'classcfg_success' => 'Success',
-    'classcfg_success_save' => "User configuration was saved! Click <a href='staffpanel.php?tool=class_config'>here to get back</a>",
+    'classcfg_success_save' => "User configuration was saved!",
     'classcfg_error_query1' => 'There was an error while executing the update query or nothing was updated 1.',
     'classcfg_error_class_name' => 'We cannot have empty class name!',
     'classcfg_error_class_value' => 'We cannot have empty class values!',
     'classcfg_error_required' => 'Required Data Not Given!',
-    'classcfg_success_reset' => "User configuration was Reset! Click <a href='staffpanel.php?tool=class_config'>here to get back</a>",
+    'classcfg_success_reset' => "User configuration was Reset!",
     'classcfg_error_query2' => "'There was an error while executing the update query or nothing was updated 2.",
     'classcfg_class_settings' => 'User Class Settings',
     'classcfg_class_name' => 'Class Name',
