@@ -1,18 +1,19 @@
 <?php
 
 $lang = [
+    'classcfg_success_uglify' => "Run '[sudo] php bin/uglify.php to make the changes effective",
     'classcfg_error' => 'Eroare',
     'classcfg_denied' => 'Acces Refuzat!',
     'classcfg_error1' => 'Tu nu ai ce c&#259;uta aici, ai &#238;ncercat s&#259; intri direct la acest fisier.',
     'classcfg_file_created' => "**\nAcest fi&#351;ier a fost creat la ",
     'classcfg_user_cfg' => ".\nConfigurare Clas&#259; de utilizatori.\n**/\n\n",
     'classcfg_success' => 'Succes',
-    'classcfg_success_save' => "Configura&#355;iile pentru clasa utilizatorilor a fost salvat&#259;! Clic <a href='staffpanel.php?tool=class_config'>aici pentru a te duce &#238;napoi</a>",
+    'classcfg_success_save' => "Configura&#355;iile pentru clasa utilizatorilor a fost salvat&#259;!",
     'classcfg_error_query1' => 'A&#355;i &#238;ntampinat o eroare &#238;n timp ce se executa o interogare si nimic nu s-a actualizat. 1',
     'classcfg_error_class_name' => 'C&#226;mpul cu numele clasei nu poate fi gol!',
     'classcfg_error_class_value' => 'C&#226;mpul cu valoarea clasei nu poate fi gol !',
     'classcfg_error_required' => 'Nu a&#355;i pus datele necesare!',
-    'classcfg_success_reset' => "Configura&#355;iile pentru clasa utilizatorilor a fost resetat&#259;! Clic <a href='staffpanel.php?tool=class_config'>aici pentru a te duce &#238;napoi</a>",
+    'classcfg_success_reset' => "Configura&#355;iile pentru clasa utilizatorilor a fost resetat&#259;!",
     'classcfg_error_query2' => "'A&#355;i &#238;ntampinat o eroare &#238;n timp ce se executa o interogare si nimic nu s-a actualizat.2",
     'classcfg_class_settings' => 'Set&#259;ri clas&#259; de utilizatori',
     'classcfg_class_name' => 'Nume clas&#259;',
