@@ -1,3 +1,6 @@
+26 Jun 2018
+add: notice to run uglify.php when changing classes info
+
 25 Jun 2018
 update: limit video size in AJAX Chat
 add: video player to AJAX Chat
